Fix overlay z-index

--- a/src/components/Spotify/Track/Track.module.scss
+++ b/src/components/Spotify/Track/Track.module.scss
@@ -7,7 +7,7 @@
   transition: 0.3s all;
   user-select: none;
 
-  &:hover {
+  &:hover:not(.isMobile) {
     padding-left: 15px;
   }
 
