--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -10,6 +10,7 @@
   outline: none;
   position: relative;
   width: 70%;
+  z-index: 1000;
 
   .header {
     align-items: center;
@@ -52,7 +53,7 @@
 }
 
 .overlay {
-  background-color: none;
+  background-color: rgba($color: #000000, $alpha: 0.6);
   position: fixed;
   top: 0;
   left: 0;
@@ -60,6 +61,7 @@
   bottom: 0;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
+  z-index: 999;
 }
 
 @media screen and (max-width: $mobileWidth) {
